fixed button overlap

--- a/app/assets/stylesheets/pages/_orders-show.scss
+++ b/app/assets/stylesheets/pages/_orders-show.scss
@@ -44,7 +44,6 @@
     box-shadow: 0 0.2px 0.3rem #3d3cee;
     font: 400 13.3333px Arial;
     color: #FFF;
-    margin-top: -16px;
     margin-bottom: 8px;
   }
 }
@@ -74,5 +73,4 @@
 }
 
 .directions-btn {
-  margin: 50px;
 }
